--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "4.0.1",
     "relay-hooks": "^4.0.0-rc.1",
     "typescript": "^4.0.3",
+    "use-debounce": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
   "eslintConfig": {
