--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "babel-plugin-relay": "^10.1.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^0.0.0-experimental-3310209d0",
+    "react-dom": "^0.0.0-experimental-3310209d0",
     "react-relay": "^0.0.0-experimental-0b967d2e",
     "react-scripts": "4.0.1",
     "relay-hooks": "^4.0.0-rc.1",
